--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,5 +1,5 @@
 page {
-	background: #f2f2f2;
+	background: #f7f8fa;
 }
 
 .swiper-container {
@@ -59,7 +59,7 @@ page {
 
 .goods-container {
 	width: 100%;
-	background: #fff;
+	background: #f7f8fa;
 }
 
 .goods-title {
@@ -90,28 +90,32 @@ page {
 	height: 36rpx;
 	margin-bottom: -6rpx;
 	margin-left: 10rpx;
-
 }
 
 .list-item {
 	width: 330rpx;
-	height: 480rpx;
+	height: 450rpx;
+	background: #fff;
 	overflow: hidden;
-	margin-bottom: 20rpx;
+	margin-bottom: 30rpx;
+	border:1px solid #ebebeb;
+	border-radius:5px;
 }
 
 .list-item image {
 	width: 100%;
 	height: 330rpx;
-	border-radius: 6rpx;
 }
 
 .goods-list-title {
-	font-size: 30rpx;
+	font-size: 28rpx;
 	color: #333;
 	text-overflow: ellipsis;
 	white-space: nowrap;
 	overflow: hidden;
+	margin-top: 5px;
+	margin-left: 13px;
+	margin-right: 13px;
 }
 
 .goods-list-text {
@@ -123,8 +127,10 @@ page {
 }
 
 .goods-list-money {
-	font-size: 30rpx;
-	color: #ab2b2b;
+	margin-top: 8px;
+	font-size: 28rpx;
+	margin-left: 13px;
+	color: #fc464a;
 }
 
 .pingtuan .scroll {
