--- a/pages/goods-details/index.wxss
+++ b/pages/goods-details/index.wxss
@@ -379,7 +379,7 @@ swiper-item image {
 
 .shop-num {
 	font-size: 22rpx;
-	background-color: #b5272d;
+	background-color: #fc464a;
 	color: #fff;
 	width: 36rpx;
 	height: 36rpx;
@@ -408,7 +408,7 @@ swiper-item image {
 }
 
 .buy-now {
-	background-color: #b5272d;
+	background-color: #fc464a;
 	color: #fff;
 }
 
@@ -479,7 +479,7 @@ swiper-item image {
 
 .pop-goods-price {
 	font-size: 26rpx;
-	color: #b5272d;
+	color: #fc464a;
 	margin-top: 20rpx;
 }
 
@@ -517,8 +517,8 @@ swiper-item image {
 }
 
 .size-label-box .label-item.active {
-	color: #b5272d;
-	border: 1px solid #b5272d;
+	color: #fc464a;
+	border: 1px solid #fc464a;
 }
 
 .buy-num-box {
@@ -565,7 +565,7 @@ swiper-item image {
 	line-height: 89rpx;
 	font-size: 34rpx;
 	color: #fff;
-	background-color: #b5272d;
+	background-color: #fc464a;
 }
 
 .buy-num-box .num-box .hui {
@@ -602,7 +602,7 @@ swiper-item image {
 }
 
 .goods-reputa-user text {
-	background-color: #b5272d;
+	background-color: #fc464a;
 	color: #fff;
 	font-size: 24rpx;
 	margin-left: 10px;
@@ -647,8 +647,8 @@ swiper-item image {
 }
 
 .tab-header .active {
-	color: #b4282d;
-	border-bottom: 2rpx solid #b4282d;
+	color: #fc464a;
+	border-bottom: 2rpx solid #fc464a;
 }
 
 .tab-container {
@@ -830,7 +830,7 @@ swiper-item image {
 
 .show-share-title {
 	text-align: center;
-	color: #b5272d;
+	color: #fc464a;
 	font-size: 34rpx;
 	margin-top: 10%;
 }
@@ -853,7 +853,7 @@ swiper-item image {
 	height: 46rpx;
 	display: block;
 	margin: 0 auto;
-	background-color: #b5272d;
+	background-color: #fc464a;
 	padding: 26rpx;
 	border-radius: 50%;
 }
@@ -862,7 +862,7 @@ swiper-item image {
 	font-size: 28rpx;
 	display: block;
 	text-align: center;
-	color: #b5272d;
+	color: #fc464a;
 	margin-top: 6rpx;
 }
 
@@ -887,7 +887,7 @@ swiper-item image {
 	height: 50rpx;
 	display: block;
 	margin: 0 auto;
-	background-color: #b5272d;
+	background-color: #fc464a;
 	padding: 24rpx;
 	border-radius: 50%;
 }
@@ -896,7 +896,7 @@ swiper-item image {
 	font-size: 28rpx;
 	display: block;
 	text-align: center;
-	color: #b5272d;
+	color: #fc464a;
 	margin-top: 6rpx;
 }
 
@@ -934,7 +934,7 @@ swiper-item image {
 	bottom: 0;
 	width: 100%;
 	text-align: center;
-	background-color: #b5272d;
+	background-color: #fc464a;
 	color: #fff;
 	height: 80rpx;
 	line-height: 80rpx;
