--- a/pages/my-kanjia/index.wxss
+++ b/pages/my-kanjia/index.wxss
@@ -33,8 +33,8 @@
 }
 
 .tab-header .active {
-  color: #b5272d;
-  border-bottom: 1px solid #b5272d;
+  color: #fc464a;
+  border-bottom: 1px solid #fc464a;
 }
 
 .tab-container {
@@ -94,7 +94,7 @@
 
 .money-min text {
   font-size: 28rpx;
-  color: #b5272d;
+  color: #fc464a;
 }
 
 .money-max {
@@ -105,5 +105,5 @@
 
 .list-info-info {
   font-size: 26rpx;
-  color: #b5272d;
+  color: #fc464a;
 }
